# alarm_clock_hass_lovelace

./: .gitignore  BUGFIX_ANALYSIS.md  CARD_DISCOVERY_FIX.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_ANALYSIS_ISSUES.md  DIAGNOSTICS.md  FIX_CIRCULAR_REFERENCE.md  FIX_SUMMARY.md  FRONTEND_FIX_SUMMARY.md  FRONTEND_POISONING_ANALYSIS.md  HACS_ESSENTIALS.md  HACS_LOVELACE_FIX.md  PR_SUMMARY.md  README.md  RELEASE_PROCESS.md  REPOSITORY_SETUP.md  SECURITY_SUMMARY.md  SPLIT_README.md  SPLIT_SUMMARY.md  TEST_INFRASTRUCTURE_FIX.md  hacs.json  info.md  package-lock.json  package.json  requirements-dev.txt  requirements.txt  requirements_test.txt  vitest.config.js
.github/workflows/: dependabot.yml  hacs-validation.yml  release.yml  test-frontend.yml  tests.yml  validate.yml
alarm_clock_backend/: CONTRIBUTING.md  README.md  hacs.json  info.md  pyproject.toml
alarm_clock_backend/.github/workflows/: release.yml  tests.yml
alarm_clock_backend/custom_components/alarm_clock/: __init__.py  binary_sensor.py  coordinator.py  manifest.json  state_machine.py
alarm_clock_backend/custom_components/alarm_clock/translations/: de.json
alarm_clock_backend/tests/: __init__.py  check_versions.py  test_attributes.py  test_code_quality.py  test_config_flow.py  test_coordinator.py  test_default_scripts_fix.py  test_integration_compatibility.py
alarm_clock_card/: CONTRIBUTING.md  README.md  hacs.json  info.md  package-lock.json  package.json  vitest.config.js
alarm_clock_card/.github/: dependabot.yml
alarm_clock_card/tests/: check-versions.js  duplicate-registration.test.js  version-consistency.test.js
custom_components/alarm_clock/: __init__.py  alarm-clock-card.js  binary_sensor.py  config_flow.py  const.py  coordinator.py  (+11 more)
tests/: README.md  conftest.py  test_attributes.py  test_code_quality.py  test_config_flow.py  test_coordinator.py  test_integration.py  test_state_machine.py
www/: alarm-clock-card.js
(+11 files in other folders)
